# almost-free-solidity

./: .gitignore  .gitmodules  README.md
contracts/: remappings.txt
contracts/src/: ComputationOracle.sol
examples/: Example.sol  SimpleExamle.sol  add_provable.sol
prover/: Cargo.toml
prover/contracts/: README.md
prover/contracts/src/: SolcZkmod.sol
prover/elf/: riscv32im-succinct-zkvm-elf
prover/lib/: Cargo.toml
prover/lib/src/: lib.rs
prover/lib/src/evm/: block.rs  context.rs  eval.rs  helpers.rs  jump_map.rs  machine.rs  memory.rs  mod.rs  opcode.rs  stack.rs
prover/lib/src/prover/: mod.rs  prover.rs
prover/program/: Cargo.toml
prover/program/src/: main.rs
prover/server/: Cargo.toml
solc-zkmod/: Cargo.toml
solc-zkmod/src/: main.rs
