[package]
name = "solc-zkmod-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-sdk.workspace = true
clap.workspace = true

hex = "0.4.3"
primitive-types = { version = "0.12", default-features = false, features = ["rlp", "std"] }
rlp = "0.5.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha3 = "0.10.6"
strum = "0.26.3"
tiny-keccak = "2.0.2"
tokio.workspace = true