[package]
version = "0.1.0"
name = "solc-zkmod-server"
edition = "2021"
default-run = "solc-zkmod-server"

[[bin]]
name = "solc-zkmod-server"
path = "src/bin/main.rs"


[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
tracing = "0.1.40"
hex = "0.4.3"
axum = { version = "0.7.7" }
sha2 = "0.10.8"
alloy-sol-types = { workspace = true }
solc-zkmod-lib = { path = "../lib" }
tokio.workspace = true
web3.workspace = true

[build-dependencies]
sp1-helper = "3.0.0"
